--- a/GerenciadorTemakeria/WebContent/person.xhtml
+++ b/GerenciadorTemakeria/WebContent/person.xhtml
@@ -5,7 +5,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 	<title>JSF Spring Hibernate Integration</title>
 	<style type="text/css">
@@ -53,20 +55,19 @@
 		<table>
 			<tr>
 				<td><label>Name</label></td>
-				<td><h:inputText id="name" value="#{person.name}"></h:inputText>
-				</td>
+				<td><p:inputText id="name" value="#{personMB.person.name}">
+					</p:inputText></td>
 			</tr>
 			<tr>
 				<td><label>Country</label></td>
-				<td><h:inputText id="country" value="#{person.country}"></h:inputText>
+				<td><p:inputText id="country" value="#{personMB.person.country}"></p:inputText>
 				</td>
 			</tr>
 			<tr>
-				<td colspan="2"><h:commandButton
-						action="#{personService.addPerson(person)}" value="Add Person"></h:commandButton>
+				<td colspan="2"><p:commandButton
+						actionListener="#{personMB.addPerson()}" value="Add Person" ajax="false" ></p:commandButton>
 				</td>
 			</tr>
-
 		</table>
 
 	</h:form>
@@ -74,14 +75,14 @@
 	<br />
 	<h3>Persons List</h3>
 
-	<c:if test="${!empty personService.listPersons()}">
+	<c:if test="${!empty personMB.listPersons()}">
 		<table class="tg">
 			<tr>
 				<th width="80">Person ID</th>
 				<th width="120">Person Name</th>
 				<th width="120">Person Country</th>
 			</tr>
-			<ui:repeat value="${personService.listPersons()}" var="person">
+			<ui:repeat value="${personMB.listPersons()}" var="person">
 				<tr>
 					<td>${person.id}</td>
 					<td>${person.name}</td>
