--- a/GerenciadorTemakeria/WebContent/cadastroMesa.xhtml
+++ b/GerenciadorTemakeria/WebContent/cadastroMesa.xhtml
@@ -1,109 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	template="/WEB-INF/templates/template.xhtml">
 
-<h:head>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
-		rel='stylesheet' type='text/css' />
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Sistema de gerenciamento" />
-	<meta name="keywords"
-		content="simple #2, template, simpletemplates.org" />
-	<title>Comanda Rapida</title>
-</h:head>
-<h:body>
+	<ui:define name="conteudo">
+		<div id="contentwrap">
+			<div class="cleft">
+				<ul>
+					<li><a href="#">Gerenciar Mesas</a></li>
+					<li><a href="#">Cadastrar Mesas</a></li>
+					<li><a href="#">Cadastra Produtos</a></li>
+					<li><a href="#">Exemplo 1</a></li>
+				</ul>
+				<h3>Selecionado</h3>
+				<ul>
+					<li><a href="#">Exemplo 2</a></li>
+					<li><a href="#">Exemplo 3</a></li>
+				</ul>
 
-	<div id="top">
-
-		<div id="header">
-			<h1>Comanda Rapida</h1>
+			</div>
+			<div class="cright">
+				<h2>Cadastro de Mesas</h2>
+				<h:form>
+					<table>
+						<tr>
+							<td><label>Codigo</label></td>
+							<td><p:inputText id="codigo" value="#{mesaMB.mesa.codigo}">
+								</p:inputText></td>
+						</tr>
+						<tr>
+							<td><label>Qtd. Pessoas</label></td>
+							<td><p:inputText id="qtdPessoas"
+									value="#{mesaMB.mesa.qtdPessoas}"></p:inputText></td>
+						</tr>
+						<tr>
+							<td><label>Descricao</label></td>
+							<td><p:inputTextarea id="descricao"
+									value="#{mesaMB.mesa.qtdPessoas}"></p:inputTextarea></td>
+						</tr>
+						<tr>
+							<td colspan="2"><p:commandButton
+									actionListener="#{mesaMB.salvarMesa()}" value="Salvar"
+									ajax="false"></p:commandButton></td>
+						</tr>
+					</table>
+				</h:form>
+			</div>
+			<div class="clear"></div>
 		</div>
-		<div id="topmenu">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">What We Do</a></li>
-				<li><a href="#">The Team</a></li>
-				<li><a href="#">Contact Us</a></li>
-			</ul>
-		</div>
-
-		<div class="clear"></div>
-
-	</div>
-
-	<div id="contentwrap">
-
-		<div class="cleft">
-
-			<ul>
-				<li><a href="#">Gerenciar Mesas</a></li>
-				<li><a href="#">Cadastrar Mesas</a></li>
-				<li><a href="#">Cadastra Produtos</a></li>
-				<li><a href="#">Exemplo 1</a></li>
-			</ul>
-
-			<h3>Selecionado</h3>
-			<ul>
-				<li><a href="#">Exemplo 2</a></li>
-				<li><a href="#">Exemplo 3</a></li>
-			</ul>
-
-		</div>
-		<div class="cright">
-			<h2>Cadastro de Mesas</h2>
-			<h:form>
-				<table>
-					<tr>
-						<td><label>Codigo</label></td>
-						<td><p:inputText id="codigo" value="#{mesaMB.mesa.codigo}">
-							</p:inputText></td>
-					</tr>
-					<tr>
-						<td><label>Qtd. Pessoas</label></td>
-						<td><p:inputText id="qtdPessoas"
-								value="#{mesaMB.mesa.qtdPessoas}"></p:inputText></td>
-					</tr>
-					<tr>
-						<td><label>Descricao</label></td>
-						<td><p:inputTextarea id="descricao"
-								value="#{mesaMB.mesa.qtdPessoas}"></p:inputTextarea></td>
-					</tr>
-					<tr>
-						<td colspan="2"><p:commandButton
-								actionListener="#{mesaMB.salvarMesa()}" value="Salvar"
-								ajax="false"></p:commandButton></td>
-					</tr>
-				</table>
-
-			</h:form>
-		</div>
-		<div class="clear"></div>
-
-	</div>
-
-	<div id="footer">
-
-		<div class="left">
-			Copyright &copy; Year by <a href="#">Your Website</a>
-		</div>
-
-		<div class="right">
-			<!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-2.html
--->
-			Design by <a href="http://www.simpletemplates.org">Simple Website
-				Templates</a>
-		</div>
-
-		<div class="clear"></div>
-
-	</div>
-
-</h:body>
-</html>
+	</ui:define>
+</ui:composition>
