--- a/GerenciadorTemakeria/WebContent/cadastroMesa.xhtml
+++ b/GerenciadorTemakeria/WebContent/cadastroMesa.xhtml
@@ -9,22 +9,8 @@
 	template="/WEB-INF/templates/template.xhtml">
 
 	<ui:define name="conteudo">
-		<div id="contentwrap">
-			<div class="cleft">
-				<ul>
-					<li><a href="#">Gerenciar Mesas</a></li>
-					<li><a href="#">Cadastrar Mesas</a></li>
-					<li><a href="#">Cadastra Produtos</a></li>
-					<li><a href="#">Exemplo 1</a></li>
-				</ul>
-				<h3>Selecionado</h3>
-				<ul>
-					<li><a href="#">Exemplo 2</a></li>
-					<li><a href="#">Exemplo 3</a></li>
-				</ul>
-
-			</div>
-			<div class="cright">
+		<div class="page-content">
+			<div class="container">
 				<h2>Cadastro de Mesas</h2>
 				<h:form>
 					<table>
@@ -51,7 +37,6 @@
 					</table>
 				</h:form>
 			</div>
-			<div class="clear"></div>
 		</div>
 	</ui:define>
 </ui:composition>
