--- a/GerenciadorTemakeria/WebContent/cadastroMesas.xhtml
+++ b/GerenciadorTemakeria/WebContent/cadastroMesas.xhtml
@@ -22,7 +22,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h:form class="form-horizontal form-row-seperated" id="formMesa">
-
+							<p:messages id="messages" autoUpdate="true" closable="true" />
 							<div class="portlet light">
 
 								<div class="portlet-title">
@@ -38,48 +38,64 @@
 										<div class="tab-content no-space">
 											<div class="tab-pane active" id="tab_general">
 												<!-- Form -->
-												<div class="form-body">
-													<div class="form-group">
+												<p:outputPanel id="painelForm">
 
-														<label class="col-md-2 control-label">Codigo<span
-															class="required"> * </span>
-														</label>
-														<div class="col-md-3">
-															<p:inputText id="codigo" class="form-control"
-																required="true" placeholder="Ex: 001"
-																value="#{mesaMB.mesa.codigo}">
-															</p:inputText>
+													<div class="form-body">
+														<div class="form-group">
+
+															<label class="col-md-2 control-label">Codigo<span
+																class="required"> * </span>
+															</label>
+															<div class="col-md-3">
+																<p:inputText id="codigo" class="form-control"
+																	required="true" placeholder="Ex: 001"
+																	requiredMessage="Código Obrigatório"
+																	value="#{mesaMB.mesa.codigo}">
+																</p:inputText>
+															</div>
 														</div>
-													</div>
-													<div class="form-group">
-														<label class="col-md-2 control-label">Qtd. Pessoas<span
-															class="required"> * </span>
-														</label>
-														<div class="col-md-5">
-															<p:inputText id="qtdPessoas" class="form-control"
-																required="true" placeholder="Ex: 4"
-																value="#{mesaMB.mesa.qtdPessoas}">
-															</p:inputText>
+														<div class="form-group">
+															<label class="col-md-2 control-label">Qtd.
+																Pessoas<span class="required"> * </span>
+															</label>
+															<div class="col-md-5">
+																<p:inputText id="qtdPessoas" class="form-control"
+																	required="true" placeholder="Ex: 4"
+																	requiredMessage="Qtd. Pessoas Obrigatório"
+																	value="#{mesaMB.mesa.qtdPessoas}">
+																</p:inputText>
+															</div>
 														</div>
-													</div>
-													<div class="form-group">
-														<label class="col-md-2 control-label">Descricao <span
-															class="required"> * </span>
-														</label>
-														<div class="col-md-5">
-															<p:inputTextarea id="descricao" class="form-control"
-																required="true" placeholder="Descricao da mesa"
-																value="#{mesaMB.mesa.descricao}">
-															</p:inputTextarea>
+														<div class="form-group">
+															<label class="col-md-2 control-label">Descricao <span
+																class="required"> * </span>
+															</label>
+															<div class="col-md-5">
+																<p:inputTextarea id="descricao" class="form-control"
+																	required="true" placeholder="Descricao da mesa"
+																	requiredMessage="Descricao Obrigatório"
+																	value="#{mesaMB.mesa.descricao}">
+																</p:inputTextarea>
+															</div>
 														</div>
+														<div class="form-group">
+															<p:commandButton actionListener="#{mesaMB.salvarMesa()}"
+																value="Salvar" ajax="false"
+																rendered="#{!mesaMB.alteracao}">
+															</p:commandButton>
+															<p:commandButton actionListener="#{mesaMB.alterarMesa()}"
+																value="Atualizar" ajax="false"
+																rendered="#{mesaMB.alteracao}">
+															</p:commandButton>
+															<p:commandButton
+																actionListener="#{mesaMB.cancelarAlteracao()}"
+																value="Cancelar" ajax="false"
+																rendered="#{mesaMB.alteracao}">
+															</p:commandButton>
+														</div>
+														<!-- /Form -->
 													</div>
-													<div class="form-group">
-														<p:commandButton actionListener="#{mesaMB.salvarMesa()}"
-															value="Salvar" ajax="false">
-														</p:commandButton>
-													</div>
-													<!-- /Form -->
-												</div>
+												</p:outputPanel>
 											</div>
 										</div>
 									</div>
@@ -87,69 +103,84 @@
 							</div>
 
 							<!-- GRID LISTAGEM -->
-							<div class="portlet light">
-								<div class="portlet-title">
-									<div class="caption">
-										<i class="icon-pencil font-green-sharp"></i> <span
-											class="caption-subject font-green-sharp bold uppercase">
-											Mesas </span> <span class="caption-helper">Edição de Mesas</span>
+							<p:outputPanel id="gridResultado">
+								<div class="portlet light">
+									<div class="portlet-title">
+										<div class="caption">
+											<i class="icon-pencil font-green-sharp"></i> <span
+												class="caption-subject font-green-sharp bold uppercase">
+												Mesas </span> <span class="caption-helper">Edição de Mesas</span>
+										</div>
 									</div>
-								</div>
 
-								<div class="portlet-body">
-									<div id="sample_editable_1_wrapper"
-										class="dataTables_wrapper no-footer">
-										<table
-											class="table table-striped table-hover table-bordered dataTable no-footer"
-											id="table_produto" aria-describedby="table_produto"
-											role="grid">
-											<thead>
-												<tr>
-												<th class="sorting" tabindex="0"
-														aria-controls="table_produto" rowspan="1" colspan="1"
-														aria-label=" Código : activate to sort column descending"
-														style="width: 163px;" aria-sort="ascending">Id</th>
-													<th class="sorting" tabindex="0"
-														aria-controls="table_produto" rowspan="1" colspan="1"
-														aria-label=" Código : activate to sort column descending"
-														style="width: 163px;" aria-sort="ascending">Código</th>
-													<th class="sorting_asc" tabindex="0"
-														aria-controls="table_produto" rowspan="1" colspan="1"
-														aria-label=" Nome : activate to sort column descending"
-														style="width: 163px;" aria-sort="ascending">Qtd.
-														Pessoas</th>
-													<th class="sorting" tabindex="0"
-														aria-controls="table_produto" rowspan="1" colspan="1"
-														aria-label=" Preco : activate to sort column descending"
-														style="width: 163px;" aria-sort="ascending">Descricao</th>
-													<th	 rowspan="1" colspan="1"														
-														style="width: 100px;">Editar / Ecluir</th>
-												</tr>
-											</thead>
-											<tbody>
-												<ui:repeat var="mesa" value="#{mesaMB.mesasPesquisa}">
-													<tr role="row" class="odd">
-														<td>#{mesa.id}</td>
-														<td>#{mesa.codigo}</td>
-														<td class="sorting_1">#{mesa.qtdPessoas}</td>
-														<td class="center">#{mesa.descricao}</td>
-														<td>
-														
-														<p:commandLink actionListener="#{mesaMB.alterarMesa(mesa)}"
-															value="Alterar" ajax="false" class="edit" ></p:commandLink>
-														<p:commandLink actionListener="#{mesaMB.excluirMesa(mesa.id)}"
-															value="Alterar" ajax="false" class="edit" ></p:commandLink>
-														</td>
+									<div class="portlet-body">
+										<div id="sample_editable_1_wrapper"
+											class="dataTables_wrapper no-footer">
+											<table
+												class="table table-striped table-hover table-bordered dataTable no-footer"
+												id="table_produto" aria-describedby="table_produto"
+												role="grid">
+												<thead>
+													<tr>
+														<th class="sorting" tabindex="0"
+															aria-controls="table_produto" rowspan="1" colspan="1"
+															aria-label=" Código : activate to sort column descending"
+															style="width: 163px;" aria-sort="ascending">Id</th>
+														<th class="sorting" tabindex="0"
+															aria-controls="table_produto" rowspan="1" colspan="1"
+															aria-label=" Código : activate to sort column descending"
+															style="width: 163px;" aria-sort="ascending">Código</th>
+														<th class="sorting_asc" tabindex="0"
+															aria-controls="table_produto" rowspan="1" colspan="1"
+															aria-label=" Nome : activate to sort column descending"
+															style="width: 163px;" aria-sort="ascending">Qtd.
+															Pessoas</th>
+														<th class="sorting" tabindex="0"
+															aria-controls="table_produto" rowspan="1" colspan="1"
+															aria-label=" Preco : activate to sort column descending"
+															style="width: 163px;" aria-sort="ascending">Descricao</th>
+														<th rowspan="1" colspan="1" style="width: 100px;">Editar
+															/ Ecluir</th>
 													</tr>
-												</ui:repeat>
-											</tbody>
-										</table>
+												</thead>
+												<tbody>
+													<ui:repeat var="mesa" value="#{mesaMB.mesasPesquisa}">
+														<tr role="row" class="odd">
+															<td>#{mesa.id}</td>
+															<td>#{mesa.codigo}</td>
+															<td class="sorting_1">#{mesa.qtdPessoas}</td>
+															<td class="center">#{mesa.descricao}</td>
+															<td><p:commandLink
+																	actionListener="#{mesaMB.alterarMesa(mesa)}"
+																	value="Alterar" class="edit" validateClient="false" immediate="true"
+																	update=":formMesa:painelForm">
+																</p:commandLink> / <p:commandLink value="Excluir" class="edit"
+																	immediate="true"
+																	actionListener="#{mesaMB.excluirMesa(mesa)}"
+																	update=":formMesa:gridResultado">
+																</p:commandLink></td>
+														</tr>
+													</ui:repeat>
+												</tbody>
+											</table>
+										</div>
 									</div>
 								</div>
-							</div>
+							</p:outputPanel>
 							<!-- /GRID LISTAGEM -->
-
-
+							<p:dialog header="Effects" widgetVar="dlg3" showEffect="explode"
+								hideEffect="bounce" height="100" id="dialogConfirmacao">
+								<h:outputText value="Deseja realmente excluir este Item?" />
+								<p:commandLink value="Sim" class="edit" immediate="true"
+									actionListener="#{mesaMB.excluirMesa(mesa)}"
+									update=":formMesa:gridResultado">
+								</p:commandLink>
+								<p:commandLink
+									onclick="document.getElementById('dialogConfirmacao').hide()"
+									value="Nao" class="edit" immediate="true"
+									update="gridResultado">
+								</p:commandLink>
+							</p:dialog>
 
 						</h:form>
 					</div>
